Fixed some CSS Layout Issues
- Removed some of the images in the gallery section to make the layout work better, and look more appealing

- Changed some minor css styles

- Made the hover effects better

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -216,7 +216,7 @@ h1 {
 	margin: 0;
 	padding-bottom: 10px;
 	line-height: 2;
-	font-size: .9rem;
+	font-size: .8rem;
 	font-weight: 300;
 	text-align: center;
 }
@@ -356,9 +356,10 @@ h1 {
 
 /*=== Beginning of Gallery Styles ===*/
 
+
 .grid-wrapper {
 	display: grid;
-	grid-template-columns: 200px 200px 200px 200px 200px 200px ;
+	grid-template-columns: 250px 250px 250px 250px;
 	grid-template-rows: 200px 200px;
 	grid-gap: 2px;
 	justify-content: center;
@@ -418,31 +419,12 @@ h1 {
 	background-repeat:   no-repeat;
 	background-size: cover;
 }
-.image9{
-	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image9.jpeg'); 
-	background-position: center;
-	background-repeat:   no-repeat;
-	background-size: cover;
-}
-.image10{
-	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image10.jpeg'); 
-	background-position: center;
-	background-repeat:   no-repeat;
-	background-size: cover;
-}
-.image11{
-	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image11.jpeg'); 
-	background-position: center;
-	background-repeat:   no-repeat;
-	background-size: cover;
-}
-.image12{
-	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image12.jpeg'); 
-	background-position: center;
-	background-repeat:   no-repeat;
-	background-size: cover;
-}
 
+
+.item:hover { 
+    opacity: .6;
+    background-color: black;
+  }
 
 /*=== End of Gallery Styles===*/
 
